cmss/main/default/objects/CreditCommission__c/CreditCommission__c.object-meta.xml
<CustomObject>
    <description>Serves for manual imports/displaying credit commissions of OZ/MOT</description>
    <label>Credit Commission</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Credit Commission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>