cmss/main/default/objects/CreditCommission__c/fields/DecreaseInCreditPortfolio__c.field-meta.xml
<CustomField>
    <fullName>DecreaseInCreditPortfolio__c</fullName>
    <label>Decrease in Credit Portfolio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>