cmss/main/default/objects/CreditCommission__c/fields/FinalBalance__c.field-meta.xml
<CustomField>
    <fullName>FinalBalance__c</fullName>
    <inlineHelpText>Sum of Initial State, Increase and Decrease in Credit Portfolio</inlineHelpText>
    <label>Final Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>