cmss/main/default/objects/CreditCommission__c/fields/FinalRate__c.field-meta.xml
<CustomField>
    <fullName>FinalRate__c</fullName>
    <label>Final Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>