cmss/main/default/objects/CreditCommission__c/fields/HalfYearPeriod__c.field-meta.xml
<CustomField>
    <fullName>HalfYearPeriod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Half Year Period</label>
    <length>200</length>
    <type>Text</type>
</CustomField>