cmss/main/default/objects/CreditCommission__c/fields/IncreaseInCreditPortfolio__c.field-meta.xml
<CustomField>
    <fullName>IncreaseInCreditPortfolio__c</fullName>
    <label>Increase in Credit Portfolio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>