cmss/main/default/objects/CreditCommission__c/fields/InitialStateOfCreditPortfolio__c.field-meta.xml
<CustomField>
    <fullName>InitialStateOfCreditPortfolio__c</fullName>
    <inlineHelpText>Initial State of Credit Portfolio at the beginning of current semester</inlineHelpText>
    <label>Initial State of Credit Portfolio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>