cmss/main/default/objects/CreditCommission__c/fields/KnowledgeLink__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeLink__c</fullName>
    <formula>HYPERLINK( KnowledgeLinkImport__c , &quot;Link&quot;)</formula>
    <label>Knowledge Link</label>
    <type>Text</type>
</CustomField>