cmss/main/default/objects/CreditCommission__c/fields/KnowledgeLinkImport__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeLinkImport__c</fullName>
    <label>Knowledge Link Import</label>
    <type>Url</type>
</CustomField>