cmss/main/default/objects/CreditCommission__c/fields/PUPRate__c.field-meta.xml
<CustomField>
    <fullName>PUPRate__c</fullName>
    <inlineHelpText>Sum of Final Rate and Rate Change</inlineHelpText>
    <label>PUP Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>