cmss/main/default/objects/CreditCommission__c/fields/RateChange__c.field-meta.xml
<CustomField>
    <fullName>RateChange__c</fullName>
    <label>Rate Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>